--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <header class="container">
+    <h1>Когнитивные искажения в программировании</h1>
+    <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+  </header>
+  <main class="container">
 
+  </main>
+  <footer class="container">
+
+  </footer>
 </body>
 </html>
