--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header class="container">
-    <h1>Когнитивные искажения в программировании</h1>
-    <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+  <header class="header-wrapper">
+    <div class="container">
+      <img class="header-image" src="../assets/images/main.png" alt="Логотип">
+      <h1 class="header-title"><span class="main-text">Когнитивные<br>искажения</span><br>в программировании</h1>
+      <div class="header-text">
+        <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+        <p class="break-before">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+        <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+        <br><br>
+        <p>
+          <a href="#" class="text-uppercase primary">Подробнее</a>
+        </p>
+      </div>
+    </div>
   </header>
   <main class="container">
 
