--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,19 @@
       </div>
     </div>
   </header>
-  <main class="container">
-
+  <main>
+    <section class="video-wrapper">
+      <div class="container">
+        <h2 class="align-center">Что же это такое,<br><span class="main-text">когнитивные искажения?</span></h2>
+        <p class="align-center">Что такое когнитивные искажения. Petrovna Channel</p>
+        <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
   </main>
-  <footer class="container">
-
+  <footer>
+    <div class="container">
+      <p class="main-text">footer</p>
+    </div>
   </footer>
 </body>
 </html>
