--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,38 @@
         <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
+    <nav id="navigation" class="navigation-wrapper">
+      <div class="container">
+        <div class="nav-item">
+          <h2><span class="main-text">5 когнитивных искажений</span> о&nbsp;существовании которых стоит помнить</h2>
+        </div>
+        <div class="nav-item">
+          <span class="nav-number">1</span>
+          <h3>Эффект ИКЕА</h3>
+          <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других. </p>
+        </div>
+        <div class="nav-item">
+          <span class="nav-number">2</span>
+          <h3>Преждевременная оптимизация</h3>
+          <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+        </div>
+        <div class="nav-item">
+          <span class="nav-number">3</span>
+          <h3>Искажение новизны</h3>
+          <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые. </p>
+        </div>
+        <div class="nav-item">
+          <span class="nav-number">4</span>
+          <h3>Гиперболическое обесценивание</h3>
+          <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+        </div>
+        <div class="nav-item">
+          <span class="nav-number">5</span>
+          <h3>Ошибка планирования</h3>
+          <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+        </div>
+      </div>
+    </nav>
   </main>
   <footer>
     <div class="container">
