first content block

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,19 @@
         </div>
       </div>
     </nav>
+    <section id="ikea-effect" class="ikea-wrapper">
+      <div class="container">
+        <img class="article-img float-left margin-right30" src="../assets/images/1.png" alt="Эффект икея">
+        <span class="article-tag">Когнитивные искажения</span>
+        <h2>Эффект ИКЕА</h2>
+        <h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
+        <div class="column-wrapper">
+          <p class="article-title">Как проявляется</p>
+          <p class="first-el">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+          <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="container">
