second content block

--- a/src/index.html
+++ b/src/index.html
@@ -65,15 +65,28 @@
       </div>
     </nav>
     <section id="ikea-effect" class="ikea-wrapper">
-      <div class="container">
+      <div class="container article-wrapper dark-text">
         <img class="article-img float-left margin-right30" src="../assets/images/1.png" alt="Эффект икея">
         <span class="article-tag">Когнитивные искажения</span>
         <h2>Эффект ИКЕА</h2>
         <h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
         <div class="column-wrapper">
-          <p class="article-title">Как проявляется</p>
+          <span class="article-title">Как проявляется</span>
           <p class="first-el">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
           <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+        </div>
+      </div>
+    </section>
+    <section id="premature-optimization" class="premature-wrapper">
+      <div class="container article-wrapper light-text">
+        <img class="article-img float-right margin-left30" src="../assets/images/2.png" alt="Преждевременная оптимизация">
+        <span class="article-tag">Когнитивные искажения</span>
+        <h2>Преждевременная оптимизация</h2>
+        <h3>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
+        <div class="column-wrapper">
+          <span class="article-title">Как проявляется</span>
+          <p class="first-el">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+          <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
         </div>
       </div>
     </section>
