third content block

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <section class="video-wrapper">
       <div class="container">
         <h2 class="align-center">Что же это такое,<br><span class="main-text">когнитивные искажения?</span></h2>
-        <p class="align-center">Что такое когнитивные искажения. Petrovna Channel</p>
+        <p class="align-center dark-text">Что такое когнитивные искажения. Petrovna Channel</p>
         <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
@@ -81,8 +81,8 @@
       <div class="container article-wrapper light-text">
         <img class="article-img float-right margin-left30" src="../assets/images/2.png" alt="Преждевременная оптимизация">
         <span class="article-tag">Когнитивные искажения</span>
-        <h2>Преждевременная оптимизация</h2>
-        <h3>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
+        <h2 class="text-white">Преждевременная оптимизация</h2>
+        <h3 class="text-white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
         <div class="column-wrapper">
           <span class="article-title">Как проявляется</span>
           <p class="first-el">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
