fourth content block

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </div>
       </div>
     </nav>
-    <section id="ikea-effect" class="ikea-wrapper">
+    <section id="ikea-effect" class="dark-wrapper">
       <div class="container article-wrapper dark-text">
         <img class="article-img float-left margin-right30" src="../assets/images/1.png" alt="Эффект икея">
         <span class="article-tag">Когнитивные искажения</span>
@@ -77,7 +77,7 @@
         </div>
       </div>
     </section>
-    <section id="premature-optimization" class="premature-wrapper">
+    <section id="premature-optimization" class="light-wrapper">
       <div class="container article-wrapper light-text">
         <img class="article-img float-right margin-left30" src="../assets/images/2.png" alt="Преждевременная оптимизация">
         <span class="article-tag">Когнитивные искажения</span>
@@ -87,6 +87,19 @@
           <span class="article-title">Как проявляется</span>
           <p class="first-el">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
           <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+        </div>
+      </div>
+    </section>
+    <section id="distortion-of-novelty" class="dark-wrapper">
+      <div class="container article-wrapper dark-text">
+        <img class="article-img float-left margin-right30" src="../assets/images/3.png" alt="Искажение новизны">
+        <span class="article-tag">Когнитивные искажения</span>
+        <h2>Искажение новизны</h2>
+        <h3>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
+        <div class="column-wrapper">
+          <span class="article-title">Как проявляется</span>
+          <p class="first-el">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+          <p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
         </div>
       </div>
     </section>
