fourth content block

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         <h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
         <div class="column-wrapper">
           <span class="article-title">Как проявляется</span>
-          <p class="first-el">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+          <p class="margin-top0">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
           <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <h3 class="text-white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
         <div class="column-wrapper">
           <span class="article-title">Как проявляется</span>
-          <p class="first-el">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+          <p class="margin-top0">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
           <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
         </div>
       </div>
@@ -98,8 +98,21 @@
         <h3>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
         <div class="column-wrapper">
           <span class="article-title">Как проявляется</span>
-          <p class="first-el">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+          <p class="margin-top0">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
           <p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+        </div>
+      </div>
+    </section>
+    <section id="hyperbolic-depreciation" class="light-wrapper">
+      <div class="container article-wrapper light-text">
+        <img class="article-img float-right margin-left30" src="../assets/images/4.png" alt="Гиперболическое обесценивание">
+        <span class="article-tag">Когнитивные искажения</span>
+        <h2 class="text-white">Гиперболическое обесценивание</h2>
+        <h3 class="text-white">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</h3>
+        <div class="column-wrapper">
+          <span class="article-title">Как проявляется</span>
+          <p class="margin-top0">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+          <p class="break-before margin-top0">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
         </div>
       </div>
     </section>
