fifth content block

--- a/src/index.html
+++ b/src/index.html
@@ -37,31 +37,31 @@
         <div class="nav-item">
           <h2><span class="main-text">5 когнитивных искажений</span> о&nbsp;существовании которых стоит помнить</h2>
         </div>
-        <div class="nav-item">
+        <a href="#ikea-effect" class="nav-item">
           <span class="nav-number">1</span>
           <h3>Эффект ИКЕА</h3>
-          <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других. </p>
-        </div>
-        <div class="nav-item">
+          <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+        </a>
+        <a href="#premature-optimization" class="nav-item">
           <span class="nav-number">2</span>
           <h3>Преждевременная оптимизация</h3>
           <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
-        </div>
-        <div class="nav-item">
+        </a>
+        <a href="#distortion-of-novelty" class="nav-item">
           <span class="nav-number">3</span>
           <h3>Искажение новизны</h3>
-          <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые. </p>
-        </div>
-        <div class="nav-item">
+          <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+        </a>
+        <a href="#hyperbolic-depreciation" class="nav-item">
           <span class="nav-number">4</span>
           <h3>Гиперболическое обесценивание</h3>
           <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
-        </div>
-        <div class="nav-item">
+        </a>
+        <a href="#errors-in-planning" class="nav-item">
           <span class="nav-number">5</span>
           <h3>Ошибка планирования</h3>
           <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
-        </div>
+        </a>
       </div>
     </nav>
     <section id="ikea-effect" class="dark-wrapper">
@@ -113,6 +113,20 @@
           <span class="article-title">Как проявляется</span>
           <p class="margin-top0">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
           <p class="break-before margin-top0">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+        </div>
+      </div>
+    </section>
+    <section id="errors-in-planning" class="dark-wrapper">
+      <div class="container article-wrapper dark-text">
+        <img class="article-img float-left margin-right30" src="../assets/images/5.png" alt="Ошибка планирования">
+        <span class="article-tag">Когнитивные искажения</span>
+        <h2>Ошибка планирования</h2>
+        <h3>Неправильно рассчитывать время необходимое для завершения задачи.</h3>
+        <div class="column-wrapper">
+          <span class="article-title">Как проявляется</span>
+          <p class="margin-top0">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+          <p>Это отлично выражается в старом афоризме:</p>
+          <p>Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
         </div>
       </div>
     </section>
