--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
         <br><br>
         <p>
-          <a href="#" class="text-uppercase primary">Подробнее</a>
+          <a href="#navigation" class="text-uppercase primary">Подробнее</a>
         </p>
       </div>
     </div>
@@ -133,7 +133,20 @@
   </main>
   <footer>
     <div class="container">
-      <p class="main-text">footer</p>
+      <div class="flex">
+        <h3 class="text-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+        <div class="contactUs">
+          <label for="input1" class="text-white">Электронная почта</label>
+          <div class="input-group">
+            <input type="text" id="input1" placeholder="Ваша электронная почта">
+            <button type="submit" class="primary"></button>
+          </div>
+          <p class="text-white description">Подписываясь, вы принимаете <a href="#" class="text-white">правила сервиса</a></p>
+        </div>
+      </div>
+      <p class="copyright align-center">© 2020 Константин Константинопольский</p>
+      <p class="copyright align-center">По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b">Yash Ranadive Cognitive Biases in Programming</a></p>
+      <p class="copyright align-center"><a href="https://ru.hexlet.io/">Курсы программирования Hexlet</a></p>
     </div>
   </footer>
 </body>
