--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header-wrapper">
     <div class="container">
-      <img class="header-image" src="../assets/images/main.png" alt="Логотип">
+      <img class="header-image" src="assets/images/main.png" alt="Логотип">
       <h1 class="header-title"><span class="main-text">Когнитивные<br>искажения</span><br>в программировании</h1>
       <div class="header-text">
         <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
@@ -66,7 +66,7 @@
     </nav>
     <section id="ikea-effect" class="dark-wrapper">
       <div class="container article-wrapper dark-text">
-        <img class="article-img float-left margin-right30" src="../assets/images/1.png" alt="Эффект икея">
+        <img class="article-img float-left margin-right30" src="assets/images/1.png" alt="Эффект икея">
         <span class="article-tag">Когнитивные искажения</span>
         <h2>Эффект ИКЕА</h2>
         <h3>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</h3>
@@ -79,7 +79,7 @@
     </section>
     <section id="premature-optimization" class="light-wrapper">
       <div class="container article-wrapper light-text">
-        <img class="article-img float-right margin-left30" src="../assets/images/2.png" alt="Преждевременная оптимизация">
+        <img class="article-img float-right margin-left30" src="assets/images/2.png" alt="Преждевременная оптимизация">
         <span class="article-tag">Когнитивные искажения</span>
         <h2 class="text-white">Преждевременная оптимизация</h2>
         <h3 class="text-white">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</h3>
@@ -92,7 +92,7 @@
     </section>
     <section id="distortion-of-novelty" class="dark-wrapper">
       <div class="container article-wrapper dark-text">
-        <img class="article-img float-left margin-right30" src="../assets/images/3.png" alt="Искажение новизны">
+        <img class="article-img float-left margin-right30" src="assets/images/3.png" alt="Искажение новизны">
         <span class="article-tag">Когнитивные искажения</span>
         <h2>Искажение новизны</h2>
         <h3>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</h3>
@@ -105,7 +105,7 @@
     </section>
     <section id="hyperbolic-depreciation" class="light-wrapper">
       <div class="container article-wrapper light-text">
-        <img class="article-img float-right margin-left30" src="../assets/images/4.png" alt="Гиперболическое обесценивание">
+        <img class="article-img float-right margin-left30" src="assets/images/4.png" alt="Гиперболическое обесценивание">
         <span class="article-tag">Когнитивные искажения</span>
         <h2 class="text-white">Гиперболическое обесценивание</h2>
         <h3 class="text-white">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</h3>
@@ -118,7 +118,7 @@
     </section>
     <section id="errors-in-planning" class="dark-wrapper">
       <div class="container article-wrapper dark-text">
-        <img class="article-img float-left margin-right30" src="../assets/images/5.png" alt="Ошибка планирования">
+        <img class="article-img float-left margin-right30" src="assets/images/5.png" alt="Ошибка планирования">
         <span class="article-tag">Когнитивные искажения</span>
         <h2>Ошибка планирования</h2>
         <h3>Неправильно рассчитывать время необходимое для завершения задачи.</h3>
