--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
         <div class="column-wrapper">
           <span class="article-title">Как проявляется</span>
           <p class="margin-top0">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
-          <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+          <p class="break-before margin-top0">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
         </div>
       </div>
     </section>
