fix stylelint errors

--- a/src/index.html
+++ b/src/index.html
@@ -39,28 +39,28 @@
         </div>
         <a href="#ikea-effect" class="nav-item">
           <span class="nav-number">1</span>
-          <h3>Эффект ИКЕА</h3>
-          <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+          <h3 class="link-title">Эффект ИКЕА</h3>
+          <p class="link-text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
         </a>
         <a href="#premature-optimization" class="nav-item">
           <span class="nav-number">2</span>
-          <h3>Преждевременная оптимизация</h3>
-          <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+          <h3 class="link-title">Преждевременная оптимизация</h3>
+          <p class="link-text">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
         </a>
         <a href="#distortion-of-novelty" class="nav-item">
           <span class="nav-number">3</span>
-          <h3>Искажение новизны</h3>
-          <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+          <h3 class="link-title">Искажение новизны</h3>
+          <p class="link-text">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
         </a>
         <a href="#hyperbolic-depreciation" class="nav-item">
           <span class="nav-number">4</span>
-          <h3>Гиперболическое обесценивание</h3>
-          <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+          <h3 class="link-title">Гиперболическое обесценивание</h3>
+          <p class="link-text">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
         </a>
         <a href="#errors-in-planning" class="nav-item">
           <span class="nav-number">5</span>
-          <h3>Ошибка планирования</h3>
-          <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
+          <h3 class="link-title">Ошибка планирования</h3>
+          <p class="link-text">Неправильно рассчитывать время необходимое для завершения задачи.</p>
         </a>
       </div>
     </nav>
@@ -135,7 +135,7 @@
     <div class="container">
       <div class="flex">
         <h3 class="text-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
-        <div class="contactUs">
+        <div class="contact-us">
           <label for="input1" class="text-white">Электронная почта</label>
           <div class="input-group">
             <input type="text" id="input1" placeholder="Ваша электронная почта">
